first website created using html

--- a/recording1.html
+++ b/recording1.html
@@ -14,6 +14,8 @@
     <h6>I am heading 6</h6> 
 
 
+      <!--     <h1 opening tag>    content goes here   </h1 closing tag>           -->
+
     <p>Make a profile on Oliv and we'll get busy matching your skills and background to the right available opportunities.</p>
 
     <a href="https://oliv.com">This is a hyperlink</a>
@@ -21,6 +23,8 @@
     <br>
     <br>
 
+
+    <!--  ./ = stands for imgaes in this current folder-->
     <img src="https://assets.website-files.com/62604bb9b6d9d12008ba1216/627d0cbe0c5bbd447a635839_new-kitten-checklist.jpg"/>
 
 
