Lesson 3 - covering flexboxes and nav bars

--- a/Html/Lesson_3/recording3.html
+++ b/Html/Lesson_3/recording3.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">Home</a></li>
             <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">About</a></li>
-            <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">Blogs</a></li>
+            <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">Blog's</a></li>
             <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">Contact Us</a></li>
         </ul>
 
