--- a/Html/Lesson_4/recording4.html
+++ b/Html/Lesson_4/recording4.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">Blog's</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
