Lesson 5 - covering media queries and resposivness

--- a/Html/Lesson_5/Blogs.html
+++ b/Html/Lesson_5/Blogs.html
@@ -18,7 +18,7 @@
                     <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_blank">Contact Us</a></li>
                 </ul>
             </nav>
-                <h3>Our <span>Blog.</span> </h3>
+                <h3>Our <span>Blog..</span> </h3>
         </header>
 
     </body>
