--- a/Html/Lesson_5/recording5.html
+++ b/Html/Lesson_5/recording5.html
@@ -40,7 +40,7 @@
 
             <div id="top">
                 <h4>The Bottom Line.</h4>
-                <p>We deliver the news that is relevant to you.</p>
+                <p>We deliver the news that is relevant to youu.</p>
             </div>
 
             <div class="flex-container">
